# stm32c0xx-hal

./: Cargo.toml  shell.nix
.cargo/: config.toml
examples/: adc.rs  button.rs  hello.rs  rtic.rs  uart.rs
src/: gpio.rs  lib.rs  power.rs  prelude.rs  spi.rs  usb.rs  watchdog.rs
src/analog/: adc.rs
src/i2c/: blocking.rs  mod.rs  nonblocking.rs
src/serial/: usart.rs
src/timer/: delay.rs  mod.rs  pwm.rs  qei.rs
