[package]
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32C0 series microcontrollers"
documentation = "https://docs.rs/stm32c0xx-hal"
edition = "2018"
keywords = ["arm", "cortex-m", "stm32c0xx", "hal"]
license = "MIT/Apache-2.0"
name = "stm32c0xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32c0xx-hal"
version = "0.0.0"

[package.metadata.docs.rs]
features = ["stm32c031", "rt"]
default-target = "thumbv6m-none-eabi"

[dependencies]
bare-metal = "1.0.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
embedded-hal = "1.0.0"
fugit = "0.3.5"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }

[dependencies.stm32c0]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"
features = ["rt"]

[dev-dependencies]
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.5.0"
panic-halt = "1.0.0"
panic-semihosting = "0.6.0"

[features]
default = ["i2c-blocking"]
device-selected = []
rt = ["stm32c0/rt"]
stm32c011 = ["stm32c0/stm32c011", "device-selected"]
stm32c031 = ["stm32c0/stm32c031", "device-selected"]

i2c-blocking = []
i2c-nonblocking = []

[profile.dev]
incremental = false

[profile.release]
debug = false
codegen-units = 1
incremental = false
lto = false
